--- a/plan.html
+++ b/plan.html
@@ -11,6 +11,71 @@
 		margin: 0;
 		padding: 0;
 	}
+	.top {
+      height: 1025px;
+      color:#fff;
+      background-color: #3a95fb;
+      text-align: center;
+      padding-top: 133px;
+    }
+    .top div:first-child {
+      font-size: 50px;
+      margin-bottom: 36px;
+    }
+    .top div:last-child {
+      font-size: 92px;
+      line-height: 1;
+    }
+    .middle {
+      height: 369px;  
+      border: solid 0px #1736c9;
+      background-color: #eaf6fd;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .middle-item {
+      text-align: center;
+    }
+    .middle-item span {
+      display: block;
+      font-size: 33px;
+      color: #54a3ff;
+      font-weight: 800;
+      line-height: 1;
+      margin-top: 20px;
+    }
+    .middle-item .picture {
+      border-radius: 50%;
+      background-color: #fff;
+      width: 237px;
+      height: 237px;
+      margin: 0 68px 0 68px;
+    }
+    .bottom {
+      position: relative;
+      background-color: #3a95fb;
+      height: 823px;
+    }
+    .bottom .qrcode {
+      width: 223px;
+      height: 223px;
+      position: absolute;
+      background-color: #fff;
+      right: 100px;
+      bottom: 234px;
+    }
+    .bottom .text {
+      font-size: 33px;
+      color: #fdfcfa;
+      text-align: end;
+      position: absolute;
+      right: 360px;
+      top: 378px;
+    }
+    .bottom .text div:nth-child(2) {
+      margin: 34px 0 34px 0;
+    }
 	.week-plan-wrap {
 		background-color: white;
 		padding-left: 66px;
@@ -170,6 +235,24 @@
 
 </style>
 <body>
+	<div class="top">
+		<div>《长江作业本三年级语文》</div>
+		<div>考前突破专属定制服务</div>
+	  </div>
+	  <div class="middle">
+		<div class="middle-item">
+		  <div class="picture"></div>
+		  <span>学习计划</span>
+		</div>
+		<div class="middle-item">
+		  <div class="picture"></div>
+		  <span>学习资料</span>
+		</div>
+		<div class="middle-item">
+		  <div class="picture"></div>
+		  <span>社群共读</span>
+		</div>
+	  </div>
 	<div class="week-plan-wrap">
 		<div class="week-plan">
 			<div class="week-head first-week">
@@ -280,7 +363,7 @@
 						</div>
 						<div class="plan-detail">
 							<img class="plan-img"/>
-							<div class="plan-detail-desc"><div class="detail-desc">作文技巧提升视频</div></div>
+							<div class="plan-detail-desc"><div class="detail-desc">阅读技巧提升视频，电子书阅读</div></div>
 						</div>
 					</div>
 					<div class="plan">
@@ -292,7 +375,7 @@
 						</div>
 						<div class="plan-detail">
 							<img class="plan-img qrcode-img"/>
-							<div class="plan-detail-desc"><div class="detail-desc">本书专属作文学习群</div></div>
+							<div class="plan-detail-desc"><div class="detail-desc">线上社群：本书专属阅读提升群</div></div>
 						</div>
 					</div>
 					<div class="plan">
@@ -316,6 +399,449 @@
 				</div>
 			</div>
 		</div>
+		<div class="week-plan">
+			<div class="week-head first-week">
+				<span class="week-num">第二周</span>
+				<span class="week-desc">★作文专项必修</span>
+			</div>
+			<div class="week-detail-wrap">
+				<div class="line-img"></div>
+				<div class="week-detail">
+					<div class="plan">
+						<div class="plan-head">
+							<div class="plan-desc-wrap">
+								<img />
+								<span class="plan-desc">学习计划</span>
+							</div>
+							<div class="intro-wrap">
+								<div class="intro-desc">你只负责轻松学好。至于如何达到，小睿立刻联系老师帮你制定好。</div>
+								<div class="line"></div>
+							</div>
+						</div>
+						<div class="plan-detail">
+							<img class="plan-img"/>
+							<div class="plan-detail-desc"><div class="detail-desc">听名师讲透写作诀窍，轻松写好分类作文！</div></div>
+						</div>
+					</div>
+					<div class="day-plan">
+						<div class="day-plan-item">
+							<div class="day-left">
+								<img />
+								<span class="day-head">周一</span>
+							</div>
+							<div class="day-right">
+								<span class="day-time">19:00 线上网课</span>
+								<div class="day-desc">想象作文——假如风有颜色</div>
+							</div>
+						</div>
+						<div class="day-plan-item">
+							<div class="day-left">
+								<img />
+								<span class="day-head">周二</span>
+							</div>
+							<div class="day-right">
+								<span class="day-time">19:00 线上网课</span>
+								<div class="day-desc">叙事作文——倾听声音</div>
+							</div>
+						</div>
+						<div class="day-plan-item">
+							<div class="day-left">
+								<img />
+								<span class="day-head">周三</span>
+							</div>
+							<div class="day-right">
+								<span class="day-time">19:00 线上网课</span>
+								<div class="day-desc">写人作文——我爸爸</div>
+							</div>
+						</div>
+						<div class="day-plan-item">
+							<div class="day-left">
+								<img />
+								<span class="day-head">周四</span>
+							</div>
+							<div class="day-right">
+								<span class="day-time">19:00 线上网课</span>
+								<div class="day-desc">写景作文——校园美景</div>
+							</div>
+						</div>
+						<div class="day-plan-item">
+							<div class="day-left">
+								<img />
+								<span class="day-head">周五</span>
+							</div>
+							<div class="day-right">
+								<span class="day-time">19:00 线上网课/实体图书推荐 </span>
+								<div class="day-desc">《安的种子》——学习扩写</div>
+							</div>
+						</div>
+						<div class="day-plan-item">
+							<div class="day-left">
+								<img />
+								<span class="day-head">周六</span>
+							</div>
+							<div class="day-right">
+								<span class="day-time">9:00/14:00 线下课/线上网课回放</span>
+								<div class="day-desc">小学生全国作文竞赛（家长参与）</div>
+							</div>
+						</div>
+						<div class="day-plan-item">
+							<div class="day-left">
+								<img />
+								<span class="day-head">周日</span>
+							</div>
+							<div class="day-right">
+								<span class="day-time">19:00 线上网课</span>
+								<div class="day-desc">作文练习</div>
+							</div>
+						</div>
+					</div>
+					<div class="plan">
+						<div class="plan-head">
+							<div class="plan-d esc-wrap">
+								<img />
+								<span class="plan-desc">学习资料</span>
+							</div>
+							<div class="intro-wrap">
+								<div class="intro-desc">你只负责轻松学好。至于需要学习资料，小睿会为你整理好送到。</div>
+								<div class="line"></div>
+							</div>
+						</div>
+						<div class="plan-detail">
+							<img class="plan-img"/>
+							<div class="plan-detail-desc"><div class="detail-desc">作文技巧提升视频 </div></div>
+						</div>
+					</div>
+					<div class="plan">
+						<div class="plan-head">
+							<div class="plan-desc-wrap">
+								<img />
+								<span class="plan-desc">社群共读</span>
+							</div>
+						</div>
+						<div class="plan-detail">
+							<img class="plan-img qrcode-img"/>
+							<div class="plan-detail-desc"><div class="detail-desc">本书专属作文学习群 </div></div>
+						</div>
+					</div>
+					<div class="plan">
+						<div class="plan-head">
+							<div class="plan-desc-wrap comment">
+								<img />
+								<span class="plan-desc">本周评语</span>
+							</div>
+							<div class="plan-content">本周的学习目标是：听名师讲透写作诀窍，轻松写好分类作文！结合本书的学习内容，本周周一到周五老师将带你，每天学习一节作文课，每节课从案例讲解入手，到确认写作思路、设立文章架构、巧用作文素材等，搞懂一系列作文的写作技巧，快速写出好作文。周六对本周课程进行自主复习巩固，周日选择一道作文题目，进行写作练习，让你在练习中学会如何运用这些写作技巧。周六有两场小学生全国作文竞赛的专题线下课，可以选择由家长带孩子一起至国际博览中心参加，或者看网上回放。遇到问题可以随时到【本书专属作文学习群】中提问，也可以在群内分享自己学习的经验。</div>
+						</div>
+					</div> 
+					<div class="plan">
+						<div class="plan-head">
+							<div class="plan-desc-wrap tool">
+								<img />
+								<span class="plan-desc">使用工具</span>
+							</div>
+							<div class="plan-content">关注云舒写语文小程序，作文竞赛可选择现场填报名单参与竞赛报名，也可以现场/扫网课末尾阶段二维码参与线上报名。</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="week-plan">
+			<div class="week-head first-week">
+				<span class="week-num">第三周</span>
+				<span class="week-desc">★儿童文学名作阅读必修（其中电子阅读选修）</span>
+			</div>
+			<div class="week-detail-wrap">
+				<div class="line-img"></div>
+				<div class="week-detail">
+					<div class="plan">
+						<div class="plan-head">
+							<div class="plan-desc-wrap">
+								<img />
+								<span class="plan-desc">学习计划</span>
+							</div>
+							<div class="intro-wrap">
+								<div class="intro-desc">你只负责轻松学好。至于如何达到，小睿立刻联系老师帮你制定好。</div>
+								<div class="line"></div>
+							</div>
+						</div>
+						<div class="plan-detail">
+							<img class="plan-img"/>
+							<div class="plan-detail-desc"><div class="detail-desc">跟着作家读文学名作，激发阅读兴趣，铸炼写作能力！</div></div>
+						</div>
+					</div>
+					<div class="day-plan">
+						<div class="day-plan-item">
+							<div class="day-left">
+								<img />
+								<span class="day-head">周一</span>
+							</div>
+							<div class="day-right">
+								<span class="day-time">19:00 线上网课</span>
+								<div class="day-desc">《灵犬莱西》精讲</div>
+							</div>
+						</div>
+						<div class="day-plan-item">
+							<div class="day-left">
+								<img />
+								<span class="day-head">周二</span>
+							</div>
+							<div class="day-right">
+								<span class="day-time">19:00 线上网课/电子阅读推荐</span>
+								<div class="day-desc">《灵犬莱西》阅读</div>
+							</div>
+						</div>
+						<div class="day-plan-item">
+							<div class="day-left">
+								<img />
+								<span class="day-head">周三</span>
+							</div>
+							<div class="day-right">
+								<span class="day-time">19:00 线上网课</span>
+								<div class="day-desc">《小王子》精讲</div>
+							</div>
+						</div>
+						<div class="day-plan-item">
+							<div class="day-left">
+								<img />
+								<span class="day-head">周四</span>
+							</div>
+							<div class="day-right">
+								<span class="day-time">19:00 线上网课/电子阅读推荐     </span>
+								<div class="day-desc">《小王子》电子书阅读</div>
+							</div>
+						</div>
+						<div class="day-plan-item">
+							<div class="day-left">
+								<img />
+								<span class="day-head">周五</span>
+							</div>
+							<div class="day-right">
+								<span class="day-time">19:00 线上网课</span>
+								<div class="day-desc">《草房子》精讲</div>
+							</div>
+						</div>
+						<div class="day-plan-item">
+							<div class="day-left">
+								<img />
+								<span class="day-head">周六</span>
+							</div>
+							<div class="day-right">
+								<span class="day-time">14:00 线下读书活动</span>
+								<div class="day-desc">曹文轩《草房子》新版读者见面会</div>
+							</div>
+						</div>
+						<div class="day-plan-item">
+							<div class="day-left">
+								<img />
+								<span class="day-head">周日</span>
+							</div>
+							<div class="day-right">
+								<span class="day-time">14:00 线下读书活动 </span>
+								<div class="day-desc">曹文轩讲如何阅读文学读物</div>
+							</div>
+						</div>
+					</div>
+					<div class="plan">
+						<div class="plan-head">
+							<div class="plan-desc-wrap">
+								<img />
+								<span class="plan-desc">学习资料</span>
+							</div>
+							<div class="intro-wrap">
+								<div class="intro-desc">你只负责轻松学好。至于需要学习资料，小睿会为你整理好送到。</div>
+								<div class="line"></div>
+							</div>
+						</div>
+						<div class="plan-detail">
+							<img class="plan-img"/>
+							<div class="plan-detail-desc"><div class="detail-desc">文学名著学习课，文学名著电子书</div></div>
+						</div>
+					</div>
+					<div class="plan">
+						<div class="plan-head">
+							<div class="plan-desc-wrap">
+								<img />
+								<span class="plan-desc">社群共读</span>
+							</div>
+						</div>
+						<div class="plan-detail">
+							<img class="plan-img qrcode-img"/>
+							<div class="plan-detail-desc"><div class="detail-desc">线上社群服务：本书专属文学名作阅读群</div></div>
+						</div>
+					</div>
+					<div class="plan">
+						<div class="plan-head">
+							<div class="plan-desc-wrap comment">
+								<img />
+								<span class="plan-desc">本周评语</span>
+							</div>
+							<div class="plan-content">本周的学习目标是：通过文学名作阅读课，激发阅读兴趣的同时，帮助你锻炼写作能力。鉴于课外阅读的内容常出现在本书的习题中，结合本书的学习内容，本周一、三、五老师将带你学习《灵犬莱西》、《小王子》、《草房子》三本书，这三部名作都是本书习题常出题的书。老师将为你概括这三本书的故事情节，分析人物形象，品味精彩语言，领略名作魅力，激发阅读兴趣。本周二、四、六，你可以结合课上老师的讲解自主选择阅读该三本书的电子书。周日，你可以复习巩固所学课程，对老师着重讲解的片段，进行精读，并完成这三本书相关的习题。本周六、日的14：00，机会难得，曹文轩老师均会在市少年宫召开新版图书发布会以及线下公开课，可以通过小睿了解具体报名方式。在阅读学习的过程中，遇到问题可以随时到【本书专属文学名作阅读群】中提问，也可以在群内分享自己阅读学习的经验。</div>
+						</div>
+					</div> 
+					<div class="plan">
+						<div class="plan-head">
+							<div class="plan-desc-wrap tool">
+								<img />
+								<span class="plan-desc">使用工具</span>
+							</div>
+							<div class="plan-content">小睿自带服务；至市少年宫参与活动。</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="week-plan">
+			<div class="week-head first-week">
+				<span class="week-num">第四周</span>
+				<span class="week-desc">★学霸笔记必修</span>
+			</div>
+			<div class="week-detail-wrap">
+				<div class="line-img"></div>
+				<div class="week-detail">
+					<div class="plan">
+						<div class="plan-head">
+							<div class="plan-desc-wrap">
+								<img />
+								<span class="plan-desc">学习计划</span>
+							</div>
+							<div class="intro-wrap">
+								<div class="intro-desc">你只负责轻松学好。至于如何达到，小睿立刻联系老师帮你制定好。</div>
+								<div class="line"></div>
+							</div>
+						</div>
+						<div class="plan-detail">
+							<img class="plan-img"/>
+							<div class="plan-detail-desc"><div class="detail-desc">顶尖名校学霸笔记，细致认真，易学易用！</div></div>
+						</div>
+					</div>
+					<div class="day-plan">
+						<div class="day-plan-item">
+							<div class="day-left">
+								<img />
+								<span class="day-head">周一</span>
+							</div>
+							<div class="day-right">
+								<span class="day-time">19:00 线上网课</span>
+								<div class="day-desc">看学习方法，挑一位学霸帮助你</div>
+							</div>
+						</div>
+						<div class="day-plan-item">
+							<div class="day-left">
+								<img />
+								<span class="day-head">周二</span>
+							</div>
+							<div class="day-right">
+								<span class="day-time">19:00 一对一辅导网课</span>
+								<div class="day-desc">看学霸笔记，做本书配套习题，整理错题</div>
+							</div>
+						</div>
+						<div class="day-plan-item">
+							<div class="day-left">
+								<img />
+								<span class="day-head">周三</span>
+							</div>
+							<div class="day-right">
+								<span class="day-time">19:00 一对一辅导网课</span>
+								<div class="day-desc">看学霸笔记，做本书配套习题，整理错题</div>
+							</div>
+						</div>
+						<div class="day-plan-item">
+							<div class="day-left">
+								<img />
+								<span class="day-head">周四</span>
+							</div>
+							<div class="day-right">
+								<span class="day-time">19:00 一对一辅导网课</span>
+								<div class="day-desc">看学霸笔记，做本书配套习题，整理错题</div>
+							</div>
+						</div>
+						<div class="day-plan-item">
+							<div class="day-left">
+								<img />
+								<span class="day-head">周五</span>
+							</div>
+							<div class="day-right">
+								<span class="day-time">19:00 一对一辅导网课</span>
+								<div class="day-desc">看学霸笔记，做本书配套习题，整理错题</div>
+							</div>
+						</div>
+						<div class="day-plan-item">
+							<div class="day-left">
+								<img />
+								<span class="day-head">周六</span>
+							</div>
+							<div class="day-right">
+								<span class="day-time">19:00 电子阅读推荐</span>
+								<div class="day-desc">本周错题练习</div>
+							</div>
+						</div>
+						<div class="day-plan-item">
+							<div class="day-left">
+								<img />
+								<span class="day-head">周日</span>
+							</div>
+							<div class="day-right">
+								<span class="day-time">19:00 电子阅读推荐</span>
+								<div class="day-desc">复习的技巧——课堂笔记和错题温习 </div>
+							</div>
+						</div>
+					</div>
+					<div class="plan">
+						<div class="plan-head">
+							<div class="plan-desc-wrap">
+								<img />
+								<span class="plan-desc">学习资料</span>
+							</div>
+							<div class="intro-wrap">
+								<div class="intro-desc">你只负责轻松学好。至于需要学习资料，小睿会为你整理好送到。</div>
+								<div class="line"></div>
+							</div>
+						</div>
+						<div class="plan-detail">
+							<img class="plan-img"/>
+							<div class="plan-detail-desc"><div class="detail-desc">如何选择适合自己的一对一老师；错题本；复习技巧课</div></div>
+						</div>
+					</div>
+					<div class="plan">
+						<div class="plan-head">
+							<div class="plan-desc-wrap">
+								<img />
+								<span class="plan-desc">社群共读</span>
+							</div>
+						</div>
+						<div class="plan-detail">
+							<img class="plan-img qrcode-img"/>
+							<div class="plan-detail-desc"><div class="detail-desc">线上社群服务：本书专属语文同步学习群</div></div>
+						</div>
+					</div>
+					<div class="plan">   
+						<div class="plan-head">
+							<div class="plan-desc-wrap comment">
+								<img />
+								<span class="plan-desc">本周评语</span>
+							</div>
+							<div class="plan-content">本周的学习目标是：学顶尖名校学霸笔记，快速掌握本书知识点！这套学霸笔记，全部是由学过本书的顶尖名校学霸认真记录的笔记。你每天学完课堂知识后，同步学习笔记中的每节知识点，并完成本书配套练习题。当然，你还可以邀请一位学霸当你的辅导老师，帮助你解答疑难杂症。核对答案后，利用错题本整理错题。周六小睿会将本周你整理的错题，汇总好，以PDF的形式发送到你的微信上，你可以打印后重新练习。周日，有一节专门针对记笔记与温习的课程。在学习的过程中，遇到问题可以随时到【本书专属语文同步学习群】中提问，也可以在群内分享自己学习的经验。</div>
+						</div>
+					</div> 
+					<div class="plan">
+						<div class="plan-head">
+							<div class="plan-desc-wrap tool">
+								<img />
+								<span class="plan-desc">使用工具</span>
+							</div>
+							<div class="plan-content">轻轻家教APP；小睿自带服务。</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
+	<div class="bottom">
+		<div class="qrcode"></div>
+		<div class="text">
+		  <div>小主，要不要长按我，</div>
+		  <div>发送给一位好朋友，</div>
+		  <div>邀请他一起入群看看？</div>
+		</div>
+	  </div>
 </body>
 </html>
